@@ -4,6 +4,9 @@
 	function ibis::quaere::create
 	* src/quaere.cpp:557 vars was assigned the same value as varr
 	* tests/join-?: add files for check-join
+	* src/mensa.cpp, src/filter.cpp: wrap raw pointers used in
+	ibis::table::selct and ibis::filter::filt in std::auto_ptr to
+	address the memory leak problem reported by Jan Krivanek
 
 2010-06-21 John Wu <John dot Wu at ACM dot org>
 	* src/selectClause.h, src/selectClause.cpp: rename _verify to
